--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,57 @@
-timm
-imgviz
-scikit-image
-opencv_python_headless
-pillow
-pyqt5
-pyyaml
-torch>=2.1.1
-torchvision
-numpy
-pycocotools
-shapely
-hydra-core>=1.3.2
-tqdm>=4.66.1
-fuzzywuzzy
-python-Levenshtein
-iopath
+antlr4-python3-runtime==4.9.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
+filelock==3.16.1
+fonttools==4.55.8
+fsspec==2024.12.0
+fuzzywuzzy==0.18.0
+huggingface-hub==0.28.0
+hydra-core==1.3.2
+idna==3.10
+imageio==2.35.1
+imgviz==1.7.5
+importlib-resources==6.4.5
+iopath==0.1.10
+jinja2==3.1.5
+kiwisolver==1.4.7
+lazy-loader==0.4
+levenshtein==0.25.1
+markupsafe==2.1.5
+matplotlib==3.7.5
+mpmath==1.3.0
+networkx==3.1
+numpy==1.24.4
+omegaconf==2.3.0
+opencv-python-headless==4.11.0.86
+packaging==24.2
+pillow==10.4.0
+portalocker==3.0.0
+pycocotools==2.0.7
+pyparsing==3.1.4
+pyqt5==5.15.11
+pyqt5-qt5==5.15.2
+pyqt5-sip==12.15.0
+python-dateutil==2.9.0.post0
+python-levenshtein==0.25.1
+pywavelets==1.4.1
+pywin32==308
+pyyaml==6.0.2
+rapidfuzz==3.9.7
+requests==2.32.3
+safetensors==0.5.2
+scikit-image==0.21.0
+scipy==1.10.1
+shapely==2.0.6
+six==1.17.0
+sympy==1.13.3
+tifffile==2023.7.10
+timm==1.0.14
+torch==2.4.1
+torchvision==0.19.1
+tqdm==4.67.1
+typing-extensions==4.12.2
+urllib3==2.2.3
+zipp==3.20.2
